[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common-libs"
version = "0.1.0"
description = "共通ライブラリ集（認証・ログ・決済・通知）"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pyjwt>=2.8",
    "stripe>=7.0",
    "sqlalchemy>=2.0",
    "bcrypt>=4.0",
    "authlib>=1.3",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common"]
artifacts = [
    "common/ui/templates/**",
    "common/ui/static/**",
]
